--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     },
     "dependencies": {
         "@coral-xyz/anchor": "^0.29.0",
-        "@solana/spl-token": "^0.4.9"
+        "@metaplex-foundation/js": "^0.20.1",
+        "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
+        "@metaplex-foundation/umi": "^0.9.2",
+        "@solana/spl-token": "^0.4.9",
+        "@solana/web3.js": "^1.95.4",
+        "dotenv": "^16.4.5"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
